<resources>
    <string name="app_name">ViniloTunes</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ViniloTunes</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_artists">Artists</string>
    <string name="menu_albums">Albums</string>
    <string name="menu_collectors">Collectors</string>
    <string name="menu_exit">Exit</string>
    <string name="add">Add</string>

    <string name="template_artist_content_description">Artist image</string>

    <string name="template_album_content_description">Cover</string>
    <string name="template_album_cd_ivAlbum">Album cover</string>
    <string name="template_album_cd_tvAlbumName">Album name</string>
    <string name="template_album_cd_tvArtistName">Artist name</string>
    <string name="template_album_cd_tvGenre">Genre</string>
    <string name="template_album_cd_tvRecordLabel">Record label</string>
    <string name="template_album_cd_tvTracks">Tracks</string>
    <string name="template_album_cd_tvDescription">Description</string>
    <string name="template_album_cd_tvPerformers">Performers</string>
    <string name="template_album_cd_tvPerformersName">Name</string>
    <string name="template_album_cd_tvPerformersRole">Role</string>
    <string name="template_album_cd_tvPerformersRoleVocal">Vocal</string>
    <string name="activity_album_detail_no_performers">No performer info</string>
    <string name="activity_album_no_tracks">No tracks info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artist_list">Artist List</string>

    <string name="fragment_collector_detail_albums">Albums available</string>
    <string name="fragment_collector_detail_no_albums">No albums available</string>
    <string name="fab_add_track">Add track to Album</string>
    <string name="fragment_add_track_hint_name_track">Name of Track</string>
    <string name="fragment_album_track_hint_minutes_track">Minutes</string>
    <string name="fragment_album_track_hint_seconds_track">Seconds</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_create">Create Track</string>
    <string name="button_create_album">Create Track</string>
    <string name="botonfab">add track button</string>

    <string name="fragment_album_create_date_format">%1$d/%2$d/%3$d</string>
    <string name="album_create_hint_album_release_date">Release date of album</string>
    <string name="album_create_hint_album_description">Description of album</string>
    <string name="album_create_hint_url_cover">Cover image URL</string>
    <string name="album_create_hint_album_name">Album\'s name</string>
    <string name="album_fab_new_album">Create album button</string>
    <string name="add_album">Add Album</string>

    <string-array name="genre_album">
        <item>Genre</item>
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>

    <string-array name="label_album">
        <item>Recorded label</item>
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>

</resources>