<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.album.AlbumDetailActivity">
    <data>
        <variable
            name="album"
            type="co.edu.uniandes.vinilotunes.data.model.Album" />
        <import type="android.view.View" alias="View"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{album == null ? View.GONE : View.VISIBLE}">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <!-- Agrega un ImageView para la imagen de fondo -->
                <ImageView
                    android:id="@+id/background_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="-200dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pixabay_00" />

                <TextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/encodesanssc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="12sp"
                    app:dateFormat="@{album.releaseDate}"
                    app:layout_constraintStart_toStartOf="@+id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    tools:text="1980/10/10" />

                <TextView
                    android:id="@+id/tracks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/encodesans"
                    app:layout_constraintStart_toStartOf="@+id/recordLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabel"
                    android:text="@string/template_album_cd_tvTracks"/>

                <TextView
                    android:id="@+id/recordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/encodesans"
                    app:layout_constraintStart_toStartOf="@+id/tvDescription"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                    android:text="@string/template_album_cd_tvRecordLabel" />

                <ImageView
                    android:id="@+id/ivDetailAlbum"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/template_album_content_description"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{album.cover}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/editbox_dropdown_dark_frame" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{album.name}"
                    android:fontFamily="@font/encodesanssc"
                    android:textColor="@color/cardview_dark_background"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivDetailAlbum"
                    tools:text="Album" />

                <TextView
                    android:id="@+id/tvArtist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAlignment="textEnd"
                    android:textStyle="italic"
                    android:fontFamily="@font/encodesans"
                    android:textColor="@color/cardview_dark_background"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvGenre"
                    app:performersFromList="@{album.performers}"
                    tools:text="Performer name" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{album.description}"
                    android:fontFamily="@font/encodesans"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintEnd_toEndOf="@+id/tvArtist"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tvArtist"
                    app:layout_constraintTop_toBottomOf="@+id/tvArtist"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />

                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/encodesans"
                    android:text="@{album.genre}"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/genre"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    tools:text="Genre" />

                <TextView
                    android:id="@+id/tvLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/encodesans"
                    android:text="@{album.recordLabel}"
                    app:layout_constraintEnd_toEndOf="@+id/tvDescription"
                    app:layout_constraintStart_toEndOf="@+id/recordLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                    tools:text="Record Label" />

                <TextView
                    android:id="@+id/tvTracks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/encodesans"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tvLabel"
                    app:layout_constraintStart_toStartOf="@+id/tvDescription"
                    app:layout_constraintTop_toBottomOf="@id/tracks"
                    app:tracksFromList="@{album.tracks}"
                    tools:text="Track 1\nTrack 2\nTrack 3\nTrack 3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>